# VertexRegen

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
scripts/: create_dataset.py  demo_tokenize.py  utils.py
tokenizer/: CMakeLists.txt  build.sh  pyproject.toml
tokenizer/src/: common.h  garland_heckbert_no_placement.h  mesh.cpp  mesh.h  pybind.cpp  simplify.cpp  simplify.h  simplify_stop_predicate.h  visitor.cpp  visitor.h
tokenizer/vertexregen_tokenizer/: __init__.py  __init__.pyi  collapse.py  tokenize.py  utils.py
