[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "vertexregen_tokenizer"
version = "0.0.1"
license = "MIT"
description = "Tokenizer for VertexRegen"
authors = [
    { name = "Xiang Zhang", email = "xiz102@ucsd.edu" },
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]


[tool.scikit-build]
minimum-version = "build-system.requires"
